# nxlog-ce-installer

./: .gitignore  Dockerfile  README.md  nxlog.conf  nxlog_ce.sh  nxlog_ce_installer.sh  nxlog_python_fix.sh
.github/workflows/: docker-image.yml
configuration/: nxlog.conf
nxlog-ce-3/: ChangeLog.txt  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  libtool
nxlog-ce-3/doc/: Makefile  Makefile.in
nxlog-ce-3/doc/reference-manual/: Makefile  Makefile.in  apidoc.pl  fields.pl
nxlog-ce-3/doc/reference-manual/config-examples/: Makefile  Makefile.am  Makefile.in  im_pipe.conf  im_systemd.conf  om_python.conf  om_raijin.conf
nxlog-ce-3/doc/reference-manual/en/: Makefile  Makefile.am  Makefile.in  apidoc-core.adoc  apidoc-im_file.adoc  apidoc-om_file.adoc  apidoc-om_http.adoc  apidoc-om_ssl.adoc  apidoc-om_tcp.adoc  apidoc-pm_blocker.adoc  apidoc-pm_buffer.adoc  apidoc-xm_charconv.adoc  apidoc-xm_csv.adoc  apidoc-xm_exec.adoc  apidoc-xm_fileop.adoc  apidoc-xm_grok.adoc  apidoc-xm_json.adoc  apidoc-xm_kvp.adoc  apidoc-xm_multiline.adoc  apidoc-xm_perl.adoc  apidoc-xm_python.adoc  apidoc-xm_syslog.adoc  apidoc-xm_xml.adoc  configuration.adoc  fields-core.adoc  fields-im_internal.adoc  fields-im_mark.adoc  fields-im_ssl.adoc  fields-im_systemd.adoc  fields-im_tcp.adoc  fields-im_udp.adoc  fields-pm_norepeat.adoc  fields-pm_pattern.adoc  fields-xm_syslog.adoc  language.adoc  man_nxlog-processor.adoc  man_nxlog.adoc  man_pages.adoc  modules.adoc  nxlog-reference-manual.adoc  (+1 more)
nxlog-ce-3/doc/reference-manual/hu/: Makefile  Makefile.in
nxlog-ce-3/packaging/debian/: make_debs.sh  nxlog.conf  postinst  postrm  prerm  rules
nxlog-ce-3/packaging/redhat/: make_rpm.sh  nxlog.conf  nxlog.service  nxlog.spec.in
nxlog-ce-3/src/: Makefile  Makefile.in
nxlog-ce-3/src/common/: Makefile  Makefile.am  Makefile.in  cfgfile.h  config.h  config.h.in  confparser.c  date.c  date.h  error_debug.h  event.c  event.h  expr-core-funcproc-cb.c  expr.c  filepath.c  filepath.h  fileperms.c  fileperms.h  inet_pton.c  inet_pton.h  libnx.la  libnx_la-alloc.lo  libnx_la-backtrace.lo  libnx_la-config_cache.lo  libnx_la-confparser.lo  libnx_la-context.lo  libnx_la-date.lo  libnx_la-error_debug.lo  libnx_la-event.lo  libnx_la-exception.lo  libnx_la-expr-core-funcproc-cb.lo  libnx_la-expr-core-funcproc.lo  libnx_la-expr-grammar.lo  libnx_la-expr-parser.lo  libnx_la-expr-tokens.lo  libnx_la-expr.lo  libnx_la-filepath.lo  libnx_la-fileperms.lo  libnx_la-inet_pton.lo  libnx_la-logdata-serialize.lo  (+25 more)
nxlog-ce-3/src/common/.deps/: libnx_la-alloc.Plo  libnx_la-backtrace.Plo  libnx_la-config_cache.Plo  libnx_la-confparser.Plo  libnx_la-context.Plo  libnx_la-date.Plo  libnx_la-error_debug.Plo  libnx_la-event.Plo  libnx_la-exception.Plo  libnx_la-expr-core-funcproc-cb.Plo  libnx_la-expr-core-funcproc.Plo  libnx_la-expr-grammar.Plo  libnx_la-expr-parser.Plo  libnx_la-expr-tokens.Plo  libnx_la-expr.Plo  libnx_la-filepath.Plo  libnx_la-fileperms.Plo  libnx_la-inet_pton.Plo  libnx_la-logdata-serialize.Plo  libnx_la-logdata.Plo  libnx_la-logqueue.Plo  libnx_la-module.Plo  libnx_la-readerfuncs.Plo  libnx_la-resource.Plo  libnx_la-schedule.Plo  libnx_la-statvar.Plo  libnx_la-str.Plo  libnx_la-strptime.Plo  libnx_la-value-serialize.Plo  libnx_la-value.Plo  libnx_la-writerfuncs.Plo  ssl.Plo
nxlog-ce-3/src/common/.libs/: libnx.la  libnxssl.la
nxlog-ce-3/src/core/: Makefile  Makefile.in  core.lo  ctx.c  ctx.h  ctx.lo  libnxcore.la  libnxlog.la  main-unix.c  modules.c  modules.lo  nxlog  nxlog.h  nxlog.lo  router.lo
nxlog-ce-3/src/core/.deps/: core.Plo  ctx.Plo  main-unix.Po  modules.Plo  nxlog.Plo  router.Plo
nxlog-ce-3/src/core/.libs/: libnxlog.la
nxlog-ce-3/src/modules/: Makefile  Makefile.in
nxlog-ce-3/src/modules/extension/: Makefile  Makefile.am  Makefile.in
nxlog-ce-3/src/modules/extension/grok/: Makefile  Makefile.am  Makefile.in  expr-xm_grok-funcproc.c  expr-xm_grok-funcproc.h  expr-xm_grok-funcproc.lo  grok.c  grok.h  grok.lo  xm_grok-api.xml  xm_grok.c  xm_grok.h  xm_grok.la  xm_grok.lo  xm_grok_funcproc_cb.c  xm_grok_funcproc_cb.lo
nxlog-ce-3/src/modules/extension/grok/.deps/: expr-xm_grok-funcproc.Plo  grok.Plo  xm_grok.Plo  xm_grok_funcproc_cb.Plo
nxlog-ce-3/src/modules/extension/grok/.libs/: xm_grok.la  xm_grok.lai
nxlog-ce-3/src/modules/extension/python/: Makefile  Makefile.am  Makefile.in  expr-xm_python-funcproc.c  expr-xm_python-funcproc.h  libnxpython.c  libnxpython.h  xm_python-api.xml  xm_python.c  xm_python.h  xm_python_funcproc_cb.c  xm_python_lib.c
nxlog-ce-3/src/modules/extension/python/nxlog/: __init__.py
nxlog-ce-3/src/modules/input/: Makefile  Makefile.am  Makefile.in
nxlog-ce-3/src/modules/input/perl/: Makefile  Makefile.am  Makefile.in  im_perl.c  im_perl.h
nxlog-ce-3/src/modules/input/python/: Makefile  Makefile.am  Makefile.in  im_python.c  im_python.h
nxlog-ce-3/src/modules/output/: Makefile  Makefile.am  Makefile.in
nxlog-ce-3/src/modules/output/perl/: Makefile  Makefile.am  Makefile.in  om_perl.c  om_perl.h
nxlog-ce-3/src/modules/output/python/: Makefile  Makefile.am  Makefile.in  om_python.c  om_python.h
nxlog-ce-3/src/modules/output/raijin/: Makefile  Makefile.am  Makefile.in  om_raijin.c  om_raijin.h  om_raijin.la  om_raijin.lo
nxlog-ce-3/src/modules/output/raijin/.deps/: om_raijin.Plo
nxlog-ce-3/src/modules/output/raijin/.libs/: om_raijin.la  om_raijin.lai
nxlog-ce-3/src/modules/processor/: Makefile  Makefile.am  Makefile.in
nxlog-ce-3/src/utils/: Makefile  Makefile.am  Makefile.in  csed.c  nxlog-processor  nxlog-stmnt-verifier  stresstest
nxlog-ce-3/src/utils/.deps/: processor.Po  (+2 more)
nxlog-ce-3/test/: Makefile  Makefile.in  module-tester.sh  tester.pl
nxlog-ce-3/test/cert/: ca.pem  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
nxlog-ce-3/test/common/: Makefile  Makefile.in  alloc-test  configcache  date  expression-test  logdata  logdata-serialize  scheduler-test  stmnt-test  stmnt-test.c  str-test  value-serialize  value-test
nxlog-ce-3/test/coresrc/: Makefile  Makefile.in  event  exception_test
(+562 files in other folders)
